# ED2_TP2

./: .gitignore  CMakeLists.txt  README.md
src/: intercalacaoInterna.c  intercalacaoInterna.h  main.c  quicksortInterno.c  quicksortInterno.h  util.c  util.h
test/unit/: CMakeLists.txt  main.c  unit_util.c  unit_util.h
